omg it's working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "deno.enable": true,
     "deno.lint": true,
     "deno.codeLens.implementations": true,
-    "deno.suggest.imports.autoDiscover": true
+    "deno.suggest.imports.autoDiscover": true,
+    "deno.path": "/usr/bin/deno"
 }
